# WatsonWordsmith

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  watson.py
data/books/1984/content/: chapter_1__subchapter_1.txt  chapter_1__subchapter_2.txt  chapter_1__subchapter_3.txt  chapter_1__subchapter_4.txt  chapter_1__subchapter_5.txt  chapter_1__subchapter_6.txt  chapter_1__subchapter_7.txt  chapter_1__subchapter_8.txt  chapter_2__subchapter_1.txt  chapter_2__subchapter_2.txt  chapter_2__subchapter_3.txt  chapter_2__subchapter_4.txt  chapter_2__subchapter_5.txt  chapter_2__subchapter_6.txt  chapter_2__subchapter_7.txt  chapter_2__subchapter_8.txt  chapter_2__subchapter_9.txt  chapter_3__subchapter_1.txt  chapter_3__subchapter_2.txt  chapter_3__subchapter_3.txt  chapter_3__subchapter_4.txt  chapter_3__subchapter_5.txt  chapter_3__subchapter_6.txt  chapter_99__subchapter_99.txt
data/books/1984/database/: chroma.sqlite3
data/books/animal_farm/: chapter_10__subchapter_1.txt  chapter_3__subchapter_1.txt  chapter_4__subchapter_1.txt  chapter_6__subchapter_1.txt  chapter_7__subchapter_1.txt  chapter_8__subchapter_1.txt
data/books/animal_farm/content/: chapter_1__subchapter_1.txt  chapter_2__subchapter_1.txt  chapter_5__subchapter_1.txt  chapter_9__subchapter_1.txt
utils/: chat_utils.py  database_utils.py  document_handler.py
